force-app/main/default/objects/Program_Conflict__mdt/Program_Conflict__mdt.object-meta.xml
<CustomObject>
    <label>Program Conflict</label>
    <pluralLabel>Program Conflicts</pluralLabel>
</CustomObject>