force-app/main/default/objects/Program_Conflict__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Uncheck to retire a pair without deleting it. Inactive rows are ignored by the eligibility check.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>