force-app/main/default/objects/Program_Conflict__mdt/fields/Program_B__c.field-meta.xml
<CustomField>
    <fullName>Program_B__c</fullName>
    <description>One side of a conflicting programme pair. Order does not matter - the check is symmetric.</description>
    <label>Program B</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>